--- a/application/frontend/src/pages/Search/components/BodyText.scss
+++ b/application/frontend/src/pages/Search/components/BodyText.scss
@@ -1,8 +1,8 @@
 .index-text {
     margin-top: 2rem;
-    width: 67%;
+    padding: 15px;
+    width: 70%;
     background: white;
-    padding: 1%;
 }
 
 // mobile
