Trivial - missing media query for page padding

--- a/application/frontend/src/pages/Search/search.scss
+++ b/application/frontend/src/pages/Search/search.scss
@@ -25,7 +25,9 @@
 }
 
 // mobile
-.search-page {
-  padding-top: 30px;
-  padding-bottom: 30px;
+@media (min-width: 0px) and (max-width: 599px) {
+  .search-page {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
 }
