--- a/application/frontend/src/pages/Explorer/explorer.scss
+++ b/application/frontend/src/pages/Explorer/explorer.scss
@@ -5,13 +5,45 @@
 }
 
 #explorer-content>.group {
-  border-top: 1px dotted lightgrey;
-  border-left: 6px solid lightgrey;
-  margin: 4px;
-  margin-left: 46px;
-  padding: 5px;
-  vertical-align: top;
-  background-color: rgba(200, 200, 200, 0.2);
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+#explorer-content>.group-1 {
+  vertical-align: middle;
+  font-size: 120%;
+  font-weight: bold;
+  margin-left: 5px;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+#explorer-content>.group-2 {
+  vertical-align: middle;
+  width: 500px;
+  overflow: hidden;
+  white-space: nowrap;
+  display: inline-block;
+  margin-right: 30px
+}
+
+#explorer-content>#group-span {
+  color: grey;
+}
+
+#explorer-content>#groupped-links-container {
+  margin-left: 6px;
+  font-size: 80%;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+#grouped-link {
+  margin: 2px;
+  display: inline-block;
+  border: 1px dashed lightgrey;
+  padding: 3px;
+  background-color: #f0f0f0;
 }
 
 #explorer-content>.doc-id {
@@ -89,17 +121,32 @@ b {
   padding-top: 20px;
   padding-left: 12px;
 }
-p{
-  color: grey; margin-left: 26px;
-}
-#explorer-wrapper{
-  margin-left: 24px; margin-top: 20px; margin-bottom: 20px; color: grey;
+
+p {
+  color: grey;
+  margin-left: 26px;
 }
 
-#filter{
-  font-size: 16px; height: 32px; width: 320px; margin-bottom: 10px;
+#explorer-wrapper {
+  margin-left: 24px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  color: grey;
 }
-#search-summary{
-  display: inline-block; vertical-align: middle;
+
+#filter {
+  font-size: 16px;
+  height: 32px;
+  width: 320px;
+  margin-bottom: 10px;
 }
-#graphs{font-size: 80%; color: grey;}
+
+#search-summary {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+#graphs {
+  font-size: 80%;
+  color: grey;
+}
