differentiate colours from CRE code and name

--- a/application/frontend/src/pages/Explorer/explorer.scss
+++ b/application/frontend/src/pages/Explorer/explorer.scss
@@ -55,6 +55,11 @@ main#explorer-content {
         line-height: 30px;
         font-weight: bold;
       }
+
+      .cre-code {
+        margin-right: 4px;
+        color: grey;
+      }
     }
   }
 
