--- a/application/frontend/src/pages/Explorer/explorer.scss
+++ b/application/frontend/src/pages/Explorer/explorer.scss
@@ -36,6 +36,7 @@ main#explorer-content {
 
   .list {
     padding: 0;
+    width: 100%;
   }
 
   .arrow {
@@ -60,23 +61,53 @@ main#explorer-content {
     background-color: rgba(200, 200, 200, 0.2);
     vertical-align: middle;
 
+    .content {
+      display: flex;
+      flex-wrap: wrap;
+    }
+
     .header {
       margin-left: 5px;
       overflow: hidden;
       white-space: nowrap;
       display: flex;
       align-items: center;
+      vertical-align: middle;
 
-      a {
+      > a {
         font-size: 120%;
         line-height: 30px;
         font-weight: bold;
+        max-width: 100%;
+        white-space: normal;
       }
 
       .cre-code {
         margin-right: 4px;
         color: grey;
       }
+    }
+
+    .description {
+      margin-left: 20px;
+    }
+  }
+
+  .tags {
+    display: flex;
+    gap: 4px;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+
+    .ui.label {
+      border: 1px solid #4183c4;
+      text-shadow: none;
+    }
+
+    a:hover .label {
+      background: #4183c4;
+      color: white;
     }
   }
 
