--- a/application/frontend/src/scaffolding/Header/header.scss
+++ b/application/frontend/src/scaffolding/Header/header.scss
@@ -37,12 +37,12 @@
     .header__nav-bar__link {
       padding-top: 10px;
       padding-bottom: 10px;
-      text-align: center;
-      margin: 0 2px;
 
       .item {
         width: 100%;
         height: 100%;
+        margin: 0;
+        text-align: center;
       }
       &:hover:not(.header__nav-bar__link--active) .item {
         text-decoration: underline;
@@ -84,7 +84,7 @@ nav + * {
     justify-content: center;
 
     &.ui.secondary.menu {
-      padding-bottom: 10px;
+      padding: 0 0 10px;
       flex-direction: column;
       align-items: center;
 
