--- a/application/frontend/src/pages/Explorer/visuals/circles/circles.scss
+++ b/application/frontend/src/pages/Explorer/visuals/circles/circles.scss
@@ -16,9 +16,9 @@
     font: 11px "Helvetica Neue", Helvetica, Arial, sans-serif;
     text-anchor: middle;
     text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, -1px 0 0 #fff, 0 -1px 0 #fff;
+    pointer-events: none;
 }
 
-.label,
 .node--root,
 .node--leaf {
     pointer-events: none;
@@ -29,4 +29,8 @@
     right: 0;
     margin: 0;
     background-color: transparent;
+}
+
+.ui.toggle.checkbox {
+    margin-right: 10px;
 }
