apply header hight to all pages

--- a/application/frontend/src/pages/CommonRequirementEnumeration/commonRequirementEnumeration.scss
+++ b/application/frontend/src/pages/CommonRequirementEnumeration/commonRequirementEnumeration.scss
@@ -2,6 +2,8 @@
   padding-left: 20px;
   padding-right: 20px;
   padding-bottom: 20px;
+  margin: var(--header-height) 0;
+
 
   &__links-container {
     margin-top: 10px;
